fourh commit - Solution14_7_1 Interesting sorting